@@ -1,3 +1,8 @@
+2017-10-23  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR target/82673
+	* gcc.target/i386/pr82673.c: New test.
+
 2017-10-23  Jakub Jelinek  <jakub@redhat.com>
 
 	* lib/scanasm.exp (dg-function-on-line): Accept optional column info.
